archive/claim-cards/v275/roughten_gill.md
# CLAIM CARD — roughten_gill  (v275, seed 42, 240 steps)

**Anchor:** Roughten Gill Mine, Caldbeck Fells, Lake District, Cumbria, England. Polymetallic Pb-Cu fissure-vein deposit in Eycott Volcanic Group + Carrock Fell Intrusive Complex (granophyre footwall + gabbro hangingwall). Worked 1700s-1894 for lead + minor copper, dumps reworked for barite post-1894; classic specimen-collector locality. TYPE LOCALITY for plumbogummite (Hartley 1882; Förtsch 1967 corrected type material to plumbogummite-hinsdalite-hidalgoite mix-crystal). Per Cooper & Stanley (1990) 'Minerals of the English Lake District: Caldbeck Fells' + the Russell Society multi-part review (Bridges et al. 2011 Part 3).
**Deposit:** Roughton Gill Mine reconstructed from the mine-specific Bridges et al. (2011) study: a sustained 110-130°C primary stage deposits quartz-dominant gangue with significant dolomite/calcite and galena + chalcopyrite + sphalerite, followed by meteoric dilution and deep oxidation. Dissolving carbonate gangue buffers the supergene water so malachite and cerussite dominate rather than the older simulator's linarite-centered sulfate sequence. Later volcanic-wall weathering supplies reactive silica to oxidizing sphalerite and grows hemimorphite; phosphate-bearing drainage produces pyromorphite followed by type-locality plumbogummite as an encrusting overgrowth. Rare genuine linarite, caledonite and leadhillite remain possible but are no longer advertised as dominant deterministic stages.
**Initial:** 130 °C, 0.5 kbar, wall=tabular
**Model digest:** Pfluid:kbar-0.001..4.4|Ksp-pressure:SUPCRTBL-delta-logK-reaction-grid+density-mask+continuous-temperature-edge-hold+no-pressure-extrapolation-v2|sulfate-Ksp:USGS-PHREEQC-wateq4f-analytic5+explicit-temperature-envelope-v1|carbonate-rate:PWP-omega2over3-raw+production-positive-affinity-series-resistance-Aover1plusA+molarMgCa+pKwTP-hydroxycarbonates-v2|chemistry-evidence:ppm-mgkg-solvent+carbonate-equivalent-mass-labels-v1|SCI02-locality:PHREEQC-SUPCRTBL-anhydrite-classification+ledgered-carbonate-pulses-v1|aragonite-selector:hard-molarMgCa>=1.1-OR-explicit-open-spring+shallowP<=0.10kbar+40..100C-OR-Co5e-4..<1e-2molal+CoCa<0.6+20..30C-OR-highPstable-v5|aragonite-Sr:Wassenburg16-DSr1.38+/-0.53+accepted-zone-booked-return-v1|aragonite-Co:Barber75+GonzalezLopez18+equilibrium-and-effective-booked-DCo0.1+accepted-zone-booked-return-v2|CaCO3:Hacker05-negative-linear+/-1kbar|Prock:Pattison92-AndSil-16+/-3barC|stress:instant-resolved-shear-stable-grain-v2|event-fluid:locality-authored-material-transform+canonical-catalog-deep-match+owner-bound-MVT-90sulfide-30sulfate+receipted-exact-pore-fluid-export-replacement+atomic-heat-only-default-v4|elmwood-barite:explicit-sulfate-floor+receipted-Ba-hiatus-replacement+causal-next-pulse-masked-layers+terminal-clay-rind-v1|carbonate-boundary:PB82-dilute+DIC+reducedAlk+ideal-headspace+open-ledger+atomic-recharge+titration+accepted-zone-receipts+bulk-guard+equal-volume-mixed+solved-pCO2-uncertainty-v3|sphalerite-Ge:Belissont-Kd1708-cap22000-mass+dissolution-v2|gypsum-aw:ChirifeResnik84-NaCl-proxy-v1|silica-phase:Fournier-amorphous+chalcedony+quartz-Ostwald+reactive-pool+Manning94-grid-bounded-pressure+booked-transition+chemistry-competition-v5|surface-growth:all-cell-invalidated-exact-triangle-area+connected-patch+mass-booked-thickness+exact-shared-triangle-stratigraphy+executed-raycast+LOD-invariant-relief-v4|surface-anchor:position+void-normal+authenticated-triangle-barycentric+immutable-source-snapshot+constructor-fixed-production-provider+field-position-neighborhood-remap+separate-nearest-WallMesh-chemistry-projection+physical-host-anchor-inheritance+derived-live-remap-cache+exact-origin-edge-geodesic-occupancy+physical-normal-architecture-placement+source-qualified-fabrics+provider-timeline-replay+historical-helper-cursor+renderer-authority-lock+replay-shape-tessellation-fail-closed-v7|cavity-shape:seeded-exact-bubble-union+immutable-authored-radial-masks+pole-regular-sin2phi-cos2theta+analytic-pole-caps+digest-ledger-star-shaped-cartesian-production-v4|cavity-authority:default-before-water-chemistry-nucleation+fixed48-world-frame+zero-isovalue+Freudenthal-closed-manifold+signed-spacingOver4096-near-zero-scalar-floor+critical-contact-rejection+exact-volume-transaction+subresolution-chemistry-withheld+atomic-preflight+64-convergence+field-agreement+exact-contract-cache+semantic-startup-receipt+authenticated-replay-v4|water-boundary:mm-above-authenticated-current-floor+legacy-ring-to-authenticated-span-conversion+actual-vertex-chemistry-bands+topology-independent-wall-tint+field-clipped-interface+append-only-historical-appearance-ledger-v1|tiger-eye:HeaneyFisher03-antitaxial-crack-seal+GutzmerBeukesCairncross04-e44-surficial-alteration+BIF-physics-host+booked-NaFeSi-substrate+zeroSiO2-cumulative-O2closed-overprint+HF-only+local-tiger-iron+enum-fail-closed-v2|Mn-oxide-phase:birnessite-layer+Ba-romanechite-2x3+booked-birnessite-to-Mg-todorokite-3x3-at95-200C+pyrolusite-endmember-v2|CaSO4-phase:Hardie67-aw+P14.7Ckbar+single-evaluator+mass-balanced-replacement-v1|sulfur-ledger:sulfide+sulfate+elemental+declaration-driven-spatial+valence-specific-supersaturation+authenticated-midrun-activation+phase-resolved-testimony-v5|native-S-oxidation:production-open+O2limited-closed+diagnostic-H-v1|sulphur-bank-HgS:zoned-association-not-S0-substrate-v1|wall-dissolution:atomic-preattack-local-pH+fractional-full-surface-shielding+geodesic-feeder+USGS1248-26C-molar-volume+reported-uncertainty-per1kg+exact-Cartesian-Freudenthal-volume-ledger+validated-depth-closure+capacity-derived-equivalent-diameter+atomic-prerun-creative-reauthoring-v4|solid-occupancy:all-nondissolved+positive-only-size-cap+growth-shadowing-not-chemical-seal+dissolution-remains-local-mass-balanced+zone-integrated-volume+chalcanthite-local-CuSO4-decay-v3|cavity-seal:repeatable-transition+accepted-dissolution-immediate-below95pct-rearm+same-or-later-refill-testimony-v2|sicily-SDAOM:methane-1C1S+whole-scenario-carbon-ledger-v2|calcite-Mn:manganocalcite-excess<1.2-v1|HMC-solid-solution:Mucci87-seawater-DMgT+MucciMorse83-MgCa7.5..20-seawater25C+unknown-outside+BP89-metastable-miscibility+25C-activity-calibration+bounded-RT-extrapolation+omegaGT1-locality-licensed-heterogeneous-wall-approximation+zone-formula+dynamic-competition-stoichiometry+booked-return-v5|CuZn-carbonates:Alwan80+Kaluza24-observer-only-v1|growth-budget:calibrated-axial-mmolkg+zone-formula-ratio+booked-return-v7|dissolution:LIFO-booked-axial-inventory+5um-floor-v2|dissolution-overprint:flat-face-rate+coupled-return-dGgate+render-geometry+enforced-booked-return+replay-healing-v3|fluorite-etch:Godinho12-{100}-21C-pH3.6-I0.05-468h+Cama-dG<=-7+NaCl-closed-analogue+250x-schematic-pores+growth-shadow-access+authenticated-current-enclosure-withhold-v4|carbonate-boundary:conserved-only+explicit-initial-DIC-alk+fail-closed-open-reservoir+sabkha-recharge+zero-charge+truthful-reverse-flow-v3|engine-fluid:transactional-staged-crystal+actual-supplement+Au-ledger-v3|beryl:K36-postHF-recovery-v1|halite:vadose-propensity0.8-v1|borax-tincalconite:pure60.8C+halite-sat39.6C-oneway-v1|competition:accepted-axial-timescale+actual-zone-formula+residual-round-redistribution+single-evaluation-full-fill-negative-v5|thermal-field:LTE-voxel+geometry-weighted-finite-volume-k<=1/6+order-independent-sources+rock-boundary+per-voxel-one-way-authored-ambient+pause-retain+local-nucleation-growth-morphology+replay-v3|diagnosis:production-nucleator+local-max-context+causal-supersat+calibrated-budget-v5|scenario-contracts:headline-deterministic+accessory-deterministic-with-rationale+3seed-statistical+aspirational+fail-closed-four-tier-locality-license+owner-bound-events+canonical-locality-event-deep-match+causal-event-prerequisite+valence-correct-commissioning-reconciliation-v10|bingham:RedmondEinaudi10-pulsed-hypogene+copper-history-before-gold+gold-aspirational-without-bornite+step85-exhumation+P0.001kbar+35to25C+no-reheat+supergene-malachite-v3|bisbee:Graeme-district+post-mining-inventories+alunite-statistical+jarosite-deterministic+siderite-aspirational+zero-CoNi+8-locality-exclusions+no-forced-halite-brine-v3|tsumeb:TSNB159-confirmed-gypsum-recharge+TSNB301-questionable-rhodochrosite-excluded-v1|wittichen:authored-cooling-through-step170+ambient-thermal-pulses-disabled+step170-vadose-boundary+oxidized-sulfate-does-not-sulfidize-silver-v3|weathering-epilogue:strict-normalized-schema+inclusive-bounded-window+invalid-product-block+authored-drainage+3D-vadose+S-conserved+O2-receipt+CO2-light+same-site-precursor-history-v2|cation-sinks:accepted-shell-return-only+schneeberg-zero-Zn-all-step-finite-voxel-receipt+pharmacolite-dissolved-molar-cation-proxy+48-field-consumer-audit-v2|koettigite:Ciesielczuk20-pH<3+dissolved-molar-Zn-majority-proxy+Co-solid-solution+Hill79-Ni<=5molpct+Bowell14-Tsumeb-third-zone-only-v3|roughton-gill:Bridges11-quartz-carbonate-primary+carbonate-buffered-malachite-cerussite+silica-hemimorphite+step215-pyromorphite-encrusting-plumbogummite+signed-boundary-receipts-v3|run-testimony:actual-step+sample-index+nucleation+positive-layer-formula+returned-dissolution-inventory+habit-extent+hydration-transfer+competition-allocation+solid-solution+CDR+enclosure-liberation-lifecycle+controlled-production-engine-witness+solid-state-transformation+null-confining-pressure-v6|locality-boundary:authored-pH-buffer+heat-only-ambient-pulse+creative-exact-authority-v1|crystal-size:individual-record-vs-aggregate-habit+celestine46cm+unresolved-wulfenite-v1|replacement:actual-parent-loss+matching-route-trigger+outline-inheritance-v1|enclosure:positive-nonphantom-solid-guest+same-step-net-positive-host-material+exact-substrate-contact-or-0.5mm-physical-lateral-front+substrate-first-deterministic-host+physical-solid-geometric-reach+shared-chemistry-current-topology-receipt-strict-chronological-lifecycle-authority+authenticated-same-crystal-host-phase-lineage-and-trigger-receipts+slowing-guest+physical-solid-threshold-partial-retreat-liberation+source-specific-front-film-reversal+replay-authenticated-lifecycle-v10|transformation-reactivity:product-only-acid-retreat+LIFO-booked-return+explicit-light-realgar+authenticated-controlled-product-witness-v2|agent-runtime:explicit-sulfur-valence+ambiguous-S-rejected+owner-bound-MVT-90sulfide-30sulfate+narrow-parity-v1|deccan:Savda-Nashik-silica+scolecite-mesolite+heulandite-stilbite+apophyllite-v2|transition-locality-exclusion:target-gated-v1|evidence-binding:exact-browser-dist-runtime-data+producer-contracts+timestamp-free-strips+mechanism-witness-artifact+aggregate-artifact-sha256-v3|save-identity:version+model+scenario+voxel-fluids+dedicated-rng+nucleation-shared-seed+movement-state+growth-shadow-state+water-height+full-zone-ledgers+enclosure-lifecycle+transformation-histories-and-exposure-counters+cavity-evolution-chain+wall-depths+replay-cursor-fail-closed-v7
**Scenario spec hash:** d79e09d69818a1fca728cab28101a6e1b7c6ae28bd06fbb9ff59490c7e12345f
**Archived strip SHA-256:** 3360defa6c1e8ac63c8b0c305e3a1ba42ac8fb8c2350e661590a2da9ef35cf01

## Model boundary: calibrated growth budget
  - Kind: calibrated stoichiometric axial-growth budget proxy
  - Basis: 0.00008 mmol formula/kg solvent per accepted axial micrometre
  - Preserves: formula mole ratios and exact closure of booked inventory on dissolution
  - Limitation: not physical solid mass or volume; demand is independent of crystal size, habit, density, and rendered shell volume

## Expectation contract
**Deterministic headline (11):** quartz, calcite, galena, sphalerite, chalcopyrite, cerussite, malachite, aurichalcite, hemimorphite, pyromorphite, plumbogummite
**Deterministic accessories (12):** chalcocite — Documented at Roughton Gill and a legitimate minor secondary Cu sulfide.; pyrite — Documented primary sulfide accessory in the mine inventory.; tennantite — The mine inventory records the tennantite-tetrahedrite series, albeit with an uncertainty marker; the current modeled path reproducibly retains it as a minor accessory across all three evidence seeds.; tetrahedrite — The mine inventory records the tennantite-tetrahedrite series; retained as a minor primary fahlore.; acanthite — Documented at the mine, chiefly as a rare Ag-bearing/post-collection alteration product; the current modeled path reproducibly delivers it across all three evidence seeds while retaining it as a minor accessory.; anglesite — Documented Pb-sulfate product of galena oxidation at Roughton Gill.; brochantite — Documented secondary Cu sulfate in the mine assemblage.; smithsonite — Documented Zn-carbonate weathering product at the mine.; azurite — Documented but subordinate Cu-carbonate weathering product beside dominant malachite.; mottramite — Documented Cu-dominant Pb vanadate; the scenario's trace V is specifically retained for this phase.; chrysocolla — Documented secondary Cu-silica product at the mine.; mimetite — Documented minor campylite component. It is subordinate to arsenate-rich pyromorphite, but the reproducible seed-42 weathering path legitimately produces it after oxidation begins.
**Statistical (0):** (none)
**Aspirational (6):** dolomite — Documented significant primary gangue but subject to the simulator's independently calibrated dolomite kinetic barrier.; native_silver — Extremely rare documented specimen; most Ag resides in galena or minute sulfosalt inclusions and should not be forced as a common discrete phase.; linarite — Genuine but fairly rare at Roughton Gill; many celebrated labels belong to adjacent Caldbeck localities or dump alteration.; caledonite — Genuine but exceptionally scarce: the mine-specific review records only a handful of specimens.; leadhillite — Genuine but very rare under the mine's carbonate-buffered weathering conditions.; rosasite — Documented Zn-Cu carbonate weathering product, but absent from all three SIM 272 commissioned seeds and therefore not advertised as an executed headline result.
**Locality exclusions (17):** realgar — No primary As-sulfide occurrence is supported by the mine-specific Roughton Gill review; arsenic is minor and chiefly expressed in oxidized Pb arsenate/phosphate chemistry.; pararealgar — No primary As-sulfide occurrence is supported by the mine-specific Roughton Gill review.; orpiment — No primary As-sulfide occurrence is supported by the mine-specific Roughton Gill review.; proustite — The documented silver is chiefly in galena/minute inclusions, native silver is extremely rare, and the mine-specific record does not support a deterministic ruby-silver phase.; turquoise — The Roughton Gill mine record does not support turquoise; phosphate is routed to pyromorphite and the plumbogummite-group overprint.; vanadinite — The mine-specific record does not support vanadinite at Roughton Gill; trace V is retained only to permit documented Caldbeck mottramite where competition allows.; descloizite — The Roughton Gill mine record supports mottramite rather than the Zn-dominant descloizite endmember.; siderite — The mine-specific primary gangue is quartz with significant calcite and dolomite; the Roughton Gill phase inventory does not support a deterministic siderite gangue.; haidingerite — The mine-specific inventory does not support this Ca arsenate; oxidized arsenic is routed to the documented Pb and Cu arsenate/phosphate suite.; pharmacolite — The mine-specific inventory does not support this Ca arsenate; extensive seed-42 nucleation would be a false locality signal.; koettigite — The mine-specific inventory does not support this Zn arsenate; abundant Zn weathering is represented by documented hemimorphite, rosasite and aurichalcite.; bornite — Not documented in the audited mine-grain inventory; generic Cu-Fe-S chemistry is insufficient locality evidence.; conichalcite — Not documented in the audited Roughton Gill inventory; Cu-As-Ca availability alone must not create a mine occurrence.; olivenite — Not securely documented at the mine; the inventory commentary treats it as uncertain district-level possibility rather than a Roughton Gill license.; adamite — Not documented in the audited mine inventory; Zn-As chemistry is routed to locality-supported weathering products instead.; duftite — Not documented in the audited mine inventory; the modeled Pb-Cu-As combination is not occurrence evidence.; opal — Not documented in the audited mine inventory; reactive silica is represented by documented quartz, chrysocolla and hemimorphite pathways.

**Cited sources:**
  - Cooper M.P. & Stanley C.J. (1990) — Minerals of the English Lake District: Caldbeck Fells. Natural History Museum, London. ISBN 0-565-01102-2. THE canonical multi-volume monograph with per-mine paragenetic detail for every Caldbeck locality.
  - Bridges T.F., Green D.I., Rumsey M.S. & Leppington C.M. (2011) — A review of the mineralisation at the Roughton Gill Mines, Caldbeck Fells, Cumbria: Part 3 - Roughton Gill Mine. Journal of the Russell Society 14: 3-23. The modern definitive paper on Roughten Gill specifically.
  - Green D.I., Bridges T.F., Rumsey M.S., Leppington C.M. & Tindle A.G. (2008) — A review of the mineralogy of the Roughton Gill Mines, Caldbeck Fells, Cumbria: Part 2 - The Roughton Gill South Vein on Balliway Rigg. Journal of the Russell Society 11: 3-28.
  - Rumsey M.S. et al. (2008) — A review of the mineralization at Red Gill Mine, Caldbeck Fells, Cumbria, England. Journal of the Russell Society 11: 29-47. Adjacent-mine comparison only; its carbonate-deficient interpretation is not transferred to Roughton Gill against the mine-specific Bridges et al. evidence.
  - Symes R.F. & Young B.R. (2008) — Minerals of Northern England. British Geological Survey / National Museums Scotland. ISBN 978-1-905267-01-9. Regional context for Caldbeck within the broader Northern English mining heritage.
  - Förtsch E.B. (1967) — Plumbogummite from Roughten Gill, Cumberland. Mineralogical Magazine 36 (280): 530-538. DOI 10.1180/minmag.1967.036.280.07. Critical re-examination of Hartley's 1882 type material — demonstrated it is a plumbogummite-hinsdalite-hidalgoite mix-crystal by X-ray + IR + optical methods.
  - Hartley J. (1882) — On plumbogummite from Roughten Gill, Cumberland. Mineralogical Magazine 5: 21-23. Original type description of plumbogummite from the type locality.
  - Russell A. (1925) — On the occurrence of plumbogummite at Roughten Gill, Cumberland. Mineralogical Magazine 20: 257-264. Russell's Caldbeck mineralogy work.
  - Russell A. (1986) — A review of the mineralization of the English Lake District. Mineralogical Magazine 50: 587-600.
  - Pluth J.J., Steele I.M., Kampf A.R. & Green D.I. (2005) — Redgillite, Cu6(OH)10(SO4).H2O, a new mineral from Caldbeck Fells, Cumbria, England: description and crystal structure. Mineralogical Magazine 69: 973-980. Redgillite is a Caldbeck type-locality species (Red Gill, adjacent); flagged for future add-mineral.
  - Stanley C.J., Symes R.F. & Jones G.C. (1991) — Nickeloan mottramite and a chemical and structural study of the descloizite group of minerals. Mineralogical Magazine 55: 121-126. Caldbeck mottramite chemistry.
  - Goldring D. (1991) — Cumbria's Underground Heritage. Historical mining context for the Caldbeck Fells district + Roughten Gill working history.
  - British Geological Survey Earthwise — Mineralization in the Lake District. Fluid-inclusion T 110-130°C, K-Ar wallrock alteration ages 360-330 Ma, sulfur partly from Carboniferous evaporites, Ag-in-galena ~838 ppm.
  - Research dossier 2026-05-20 — internal research-agent compilation anchoring the scenario broth on Cooper & Stanley 1990 + Russell Society three-part review + BGS Earthwise.

**Claim-level citations:**
  - (none authored)

## Paragenetic order as grown (23 species)
| # | mineral | first step | nucleations | transformations | pathway |
|--|--|--|--|--|--|
| 1 | chalcocite | 1 | 5 | 0 | nucleation |
| 2 | chalcopyrite | 1 | 4 | 0 | nucleation |
| 3 | galena | 1 | 4 | 0 | nucleation |
| 4 | pyrite | 1 | 1 | 0 | nucleation |
| 5 | quartz | 1 | 1 | 0 | nucleation |
| 6 | sphalerite | 1 | 1 | 0 | nucleation |
| 7 | tennantite | 1 | 1 | 0 | nucleation |
| 8 | tetrahedrite | 1 | 1 | 0 | nucleation |
| 9 | acanthite | 8 | 6 | 0 | nucleation |
| 10 | calcite | 55 | 1 | 0 | nucleation |
| 11 | anglesite | 100 | 1 | 0 | nucleation |
| 12 | cerussite | 100 | 4 | 0 | nucleation |
| 13 | malachite | 100 | 1 | 0 | nucleation |
| 14 | pyromorphite | 100 | 6 | 0 | nucleation |
| 15 | brochantite | 107 | 5 | 0 | nucleation |
| 16 | azurite | 140 | 1 | 0 | nucleation |
| 17 | smithsonite | 140 | 2 | 0 | nucleation |
| 18 | mottramite | 148 | 3 | 0 | nucleation |
| 19 | chrysocolla | 180 | 5 | 0 | nucleation |
| 20 | hemimorphite | 180 | 3 | 0 | nucleation |
| 21 | mimetite | 180 | 1 | 0 | nucleation |
| 22 | aurichalcite | 202 | 1 | 0 | nucleation |
| 23 | plumbogummite | 215 | 3 | 0 | nucleation |

**Surprises (present but absent from all authored expectation tiers):** (none)
**Deterministic no-shows:** (none)
**Statistical no-shows (non-failing):** (none)
**Aspirational no-shows (non-failing):** dolomite, native_silver, linarite, caledonite, leadhillite, rosasite
**Excluded-locality appearances (failing):** (none)

## Environment trajectory (first → last, [min,max])
  - T: 129.98763888888888 → 20 °C  [20, 129.98763888888888] (raw_simulation_state)
  - pH: 6 → 5.8   [4.8, 6.6] (raw_simulation_state)
  - Eh: -150.10299956639813 → 251.67249841904993 mV  [-150.10299956639813, 322.1090020413224] (raw_simulation_state)
  - salinity: 8 → 3 psu  [3, 8] (raw_simulation_state)
  - O2: 0.05 → 1.2 ppm (mg/kg solvent)  [0.05, 1.8] (raw_simulation_state)
  - concentration: 1 → 3 ×  [1, 3] (raw_simulation_state)

## Saturation drivers
  - SI_calcite: -1.323 → -2.961  [-4.661, 0.252]
  - SI_aragonite: -1.386 → -3.087  [-4.787, 0.126]
  - SI_dolomite: -2.835 → -6.11  [-8, 0.189]
  - SI_HMC: -0.882 → -2.583  [-4.22, 0.63]
  - SI_siderite: 0.126 → -2.394  [-4.031, 1.635]
  - SI_selenite: -8 → -1.331  [-8, -1.323]
  - SI_anhydrite: -8 → -2.016  [-8, -1.953]
  - SI_barite: -8 → -8  [-8, -8]
  - SI_celestine: -8 → -8  [-8, -8]

## Authored pressure/stress/phase context (claim, not run testimony)
  - Fluid pressure: 0.5 kbar — cavity-fluid pressure; never silently substituted for rock pressure or differential stress
  - Rock pressure: unspecified kbar — unspecified; metamorphic phase field is reported unconstrained
  - Calcite/aragonite boundary: 2.477 kbar; secure aragonite=false
  - Al2SiO5: unconstrained (nominal n/a) — Rock/confining pressure is not specified; fluid pressure cannot substitute for it.
  - Gypsum/anhydrite pure-water boundary: 65.35 °C; initial a_w=0.995 ±0.020 (temperature-extrapolation)
  - Ksp pressure rule: reaction-specific SUPCRTBL delta-logK grid; bilinear only inside density and per-reaction temperature masks; no constant reaction-volume proxy
    - calcite: temperature-clamped-to-envelope; active=true; ΔlogK=0.44893582; Requested 130 C is outside this reaction's 10-90 C fitted envelope; the nearest 90 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - aragonite: temperature-clamped-to-envelope; active=true; ΔlogK=0.4298332; Requested 130 C is outside this reaction's 10-90 C fitted envelope; the nearest 90 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - dolomite: active; active=true; ΔlogK=0.89288431; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.893 relative to 1 bar at the same temperature.
    - siderite: active; active=true; ΔlogK=0.45130703; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.451 relative to 1 bar at the same temperature.
    - rhodochrosite: active; active=true; ΔlogK=0.42689177; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.427 relative to 1 bar at the same temperature.
    - anhydrite: active; active=true; ΔlogK=0.36352698; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.364 relative to 1 bar at the same temperature.
    - barite: active; active=true; ΔlogK=0.347842324; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.348 relative to 1 bar at the same temperature.
    - celestine: active; active=true; ΔlogK=0.36033788; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +0.360 relative to 1 bar at the same temperature.
    - selenite: unsupported-reaction; active=false; ΔlogK=0; Gypsum is absent from the SUPCRTBL solid-species set; the Hardie water-activity/temperature phase selector remains active, but no Ksp pressure correction is fabricated.
  - Differential stress: no authored stress event.

## Executed pressure/stress/phase testimony (archived run)
**Source:** archived executed run state; not reconstructed from scenario definition
  - Fluid pressure: 0.5 → 0.5 kbar [0.5, 0.5], n=240
  - Rock/confining pressure: not recorded
  - Temperature: 129.98763888888888 → 20 °C [20, 129.98763888888888], n=240
  - Secure aragonite assessment: 0/240 executed steps; first={"boundary_kbar":2.4772756268893517,"secure_aragonite":false}, last={"boundary_kbar":3.0264545399999996,"secure_aragonite":false}
  - Al2SiO5 executed phase counts: {"unconstrained":240}; first=unconstrained, last=unconstrained
  - Executed stress: no stress event recorded by the run.
  - Mineral transformations: none executed.
  - Transformation reactivity commissioning: controlled production-engine boundary; not a locality trajectory; artifact vugg-mechanism-witnesses-v1/23bade18c1f579f7afdbbe5a8a19318ab3e4ab79641548cf4359a550b1589a83.
    - No controlled reactivity witness is applicable to a transformation product in this locality run.
  - Conserved carbonate boundary: not enabled for this archived run.

## Declared non-sulfur fluid-boundary transactions (archived run)
**Source:** archived declared non-sulfur fluid-boundary transactions; exact rows are authenticated by the strip SHA-256
  - Closure: 5/5 transactions; all_closed=true.
  - Step 60: closed=true; declarations=[{"kind":"replacement","source":"Roughton Gill waning-ore-brine / meteoric-water replacement","fields":{"SiO2":65,"Ca":180,"Mg":60,"Cu":45,"Fe":4}}]; testimony=[{"field":"Ca","before":350,"after":180,"declaredAddition":0,"declaredReplacementTarget":180,"declaredDelta":-170,"declaredImports":0,"declaredExports":170,"actualDelta":-170,"error":0,"tolerance":3.5000000000000004e-7,"closed":true},{"field":"Cu","before":130,"after":45,"declaredAddition":0,"declaredReplacementTarget":45,"declaredDelta":-85,"declaredImports":0,"declaredExports":85,"actualDelta":-85,"error":0,"tolerance":1.3e-7,"closed":true},{"field":"Fe","before":30,"after":4,"declaredAddition":0,"declaredReplacementTarget":4,"declaredDelta":-26,"declaredImports":0,"declaredExports":26,"actualDelta":-26,"error":0,"tolerance":1e-7,"closed":true},{"field":"Mg","before":105,"after":60,"declaredAddition":0,"declaredReplacementTarget":60,"declaredDelta":-45,"declaredImports":0,"declaredExports":45,"actualDelta":-45,"error":0,"tolerance":1.05e-7,"closed":true},{"field":"SiO2","before":120,"after":65,"declaredAddition":0,"declaredReplacementTarget":65,"declaredDelta":-55,"declaredImports":0,"declaredExports":55,"actualDelta":-55,"error":0,"tolerance":1.2000000000000002e-7,"closed":true}].
  - Step 100: closed=true; declarations=[{"kind":"addition","source":"Roughton Gill upgradient deep-weathering drainage","fields":{"Cu":25,"Pb":10,"Zn":20,"Al":3,"P":2,"As":9,"V":6}}]; testimony=[{"field":"Al","before":15,"after":18,"declaredAddition":3,"declaredReplacementTarget":null,"declaredDelta":3,"declaredImports":3,"declaredExports":0,"actualDelta":3,"error":0,"tolerance":1e-7,"closed":true},{"field":"As","before":3,"after":12,"declaredAddition":9,"declaredReplacementTarget":null,"declaredDelta":9,"declaredImports":9,"declaredExports":0,"actualDelta":9,"error":0,"tolerance":1e-7,"closed":true},{"field":"Cu","before":45,"after":70,"declaredAddition":25,"declaredReplacementTarget":null,"declaredDelta":25,"declaredImports":25,"declaredExports":0,"actualDelta":25,"error":0,"tolerance":1e-7,"closed":true},{"field":"P","before":8,"after":10,"declaredAddition":2,"declaredReplacementTarget":null,"declaredDelta":2,"declaredImports":2,"declaredExports":0,"actualDelta":2,"error":0,"tolerance":1e-7,"closed":true},{"field":"Pb","before":85,"after":95,"declaredAddition":10,"declaredReplacementTarget":null,"declaredDelta":10,"declaredImports":10,"declaredExports":0,"actualDelta":10,"error":0,"tolerance":1e-7,"closed":true},{"field":"V","before":6,"after":12,"declaredAddition":6,"declaredReplacementTarget":null,"declaredDelta":6,"declaredImports":6,"declaredExports":0,"actualDelta":6,"error":0,"tolerance":1e-7,"closed":true},{"field":"Zn","before":85,"after":105,"declaredAddition":20,"declaredReplacementTarget":null,"declaredDelta":20,"declaredImports":20,"declaredExports":0,"actualDelta":20,"error":0,"tolerance":1.05e-7,"closed":true}].
  - Step 140: closed=true; declarations=[{"kind":"addition","source":"Roughton Gill carbonate-buffered upgradient Cu-weathering drainage","fields":{"Cu":80}}]; testimony=[{"field":"Cu","before":70,"after":150,"declaredAddition":80,"declaredReplacementTarget":null,"declaredDelta":80,"declaredImports":80,"declaredExports":0,"actualDelta":80,"error":0,"tolerance":1.5000000000000002e-7,"closed":true}].
  - Step 180: closed=true; declarations=[{"kind":"addition","source":"Roughton Gill volcanic-wall and upgradient sphalerite weathering seep","fields":{"SiO2":295,"Zn":75}},{"kind":"replacement","source":"Roughton Gill silica-rich Zn-weathering seep replacement","fields":{"Cu":70}}]; testimony=[{"field":"Cu","before":150,"after":70,"declaredAddition":0,"declaredReplacementTarget":70,"declaredDelta":-80,"declaredImports":0,"declaredExports":80,"actualDelta":-80,"error":0,"tolerance":1.5000000000000002e-7,"closed":true},{"field":"SiO2","before":65,"after":360,"declaredAddition":295,"declaredReplacementTarget":null,"declaredDelta":295,"declaredImports":295,"declaredExports":0,"actualDelta":295,"error":0,"tolerance":3.6000000000000005e-7,"closed":true},{"field":"Zn","before":105,"after":180,"declaredAddition":75,"declaredReplacementTarget":null,"declaredDelta":75,"declaredImports":75,"declaredExports":0,"actualDelta":75,"error":0,"tolerance":1.8000000000000002e-7,"closed":true}].
  - Step 215: closed=true; declarations=[{"kind":"addition","source":"Roughton Gill late phosphate-bearing upgradient drainage","fields":{"Al":6,"P":2}},{"kind":"replacement","source":"Roughton Gill late low-chloride phosphate drainage replacement","fields":{"Cl":24}}]; testimony=[{"field":"Al","before":18,"after":24,"declaredAddition":6,"declaredReplacementTarget":null,"declaredDelta":6,"declaredImports":6,"declaredExports":0,"actualDelta":6,"error":0,"tolerance":1e-7,"closed":true},{"field":"Cl","before":30,"after":24,"declaredAddition":0,"declaredReplacementTarget":24,"declaredDelta":-6,"declaredImports":0,"declaredExports":6,"actualDelta":-6,"error":0,"tolerance":1e-7,"closed":true},{"field":"P","before":10,"after":12,"declaredAddition":2,"declaredReplacementTarget":null,"declaredDelta":2,"declaredImports":2,"declaredExports":0,"actualDelta":2,"error":0,"tolerance":1e-7,"closed":true}].

## Crystal enclosure receipts (archived run)
**Source:** accepted host-over-guest and later liberation events from the archived executed run
  - Step 3: chalcocite #8 enclosed chalcopyrite #4; route=host-on-guest; host net layer=55.14514356506459 µm; distance/reach=0/1.8872181896558675 mm; size ratio=57.652714550243424; guest recent=2.8656306069550532 µm; guest core/loss/remaining=2.8656306069550532/0/2.8656306069550532 µm; partial loss=false.
  - Step 12: chalcocite #15 enclosed chalcopyrite #9; route=host-on-guest; host net layer=66.34305389746812 µm; distance/reach=0/1.8872181896558675 mm; size ratio=10.883076284541827; guest recent=2.9457929699740064 µm; guest core/loss/remaining=11.082813153227022/0/11.082813153227022 µm; partial loss=false.
  - Step 15: pyrite #3 enclosed chalcopyrite #16; route=guest-on-host; host net layer=39.360711427091964 µm; distance/reach=0/1.8872181896558675 mm; size ratio=410.9544642667506; guest recent=1.8653764447460754 µm; guest core/loss/remaining=1.8653764447460754/0/1.8653764447460754 µm; partial loss=false.
  - Step 21: galena #7 enclosed acanthite #13; route=guest-on-host; host net layer=207.13804441100672 µm; distance/reach=0/6.408835749671219 mm; size ratio=108.53211120827805; guest recent=2.7371631948506194 µm; guest core/loss/remaining=59.32219313434611/0/59.32219313434611 µm; partial loss=false.
  - Step 30: galena #7 enclosed acanthite #22; route=guest-on-host; host net layer=264.01043583659066 µm; distance/reach=0/8.04176389021724 mm; size ratio=275.6973178702893; guest recent=1.907548478852908 µm; guest core/loss/remaining=30.75663957691381/0/30.75663957691381 µm; partial loss=false.
  - Step 101: malachite #26 enclosed chalcopyrite #17; route=host-on-guest; host net layer=45.03924985694483 µm; distance/reach=0/1.8872181896558675 mm; size ratio=4.0437894236625365; guest recent=-38.59348621915505 µm; guest core/loss/remaining=61.329826205081844/40/21.329826205081844 µm; partial loss=true.
  - Step 156: brochantite #38 enclosed tetrahedrite #5; route=geometric-overlap; host net layer=19.569336599470738 µm; distance/reach=0/1.9730036095536516 mm; size ratio=71.16805604528113; guest recent=-36.52424806176605 µm; guest core/loss/remaining=58.69899741568807/51.52424806176605/7.174749353922017 µm; partial loss=true.
  - Step 158: malachite #26 enclosed pyrite #3; route=geometric-overlap; host net layer=277.0714561806124 µm; distance/reach=4.918964360474742/7.416410902088936 mm; size ratio=3.0945310241858612; guest recent=-45 µm; guest core/loss/remaining=3091.816036047261/885/2206.816036047261 µm; partial loss=true.
  - Step 168: malachite #26 enclosed chalcocite #15; route=geometric-overlap; host net layer=273.6664619342508 µm; distance/reach=10.557491159459996/10.723461264536224 mm; size ratio=5.415542441001531; guest recent=-45 µm; guest core/loss/remaining=2795.92539709388/1035/1760.9253970938798 µm; partial loss=true.
  - Step 199: malachite #26 enclosed tennantite #6; route=geometric-overlap; host net layer=48.618401584046545 µm; distance/reach=12.041012459973093/12.071546286052245 mm; size ratio=2685.428234901299; guest recent=-30.10010678056592 µm; guest core/loss/remaining=125.13347570742123/120.10010678056592/5.033368926855303 µm; partial loss=true.
  - Step 201: hemimorphite #51 enclosed smithsonite #40; route=host-on-guest; host net layer=36.73483255007688 µm; distance/reach=0/2.1335440497877975 mm; size ratio=3.039653068241475; guest recent=2.7044950773730734 µm; guest core/loss/remaining=239.99410743160408/0/239.99410743160408 µm; partial loss=false.
  - Final inclusion status: 11 current; 11 accepted and 0 liberated.

## Sulfur reservoir identity and conservation (archived run)
**Source:** archived phase-resolved sulfur ledger; exact samples are authenticated by the strip SHA-256
  - Ledger activation: step 0, kind=constructor_explicit_reservoirs, closed=true; initial fluid=2304000 ppm; initial solid=0 ppm.
  - Closure: 240/240 samples; all_closed=true; max |balance error|=1.1175870895385742e-8 ppm; max |testimony error|=2.153683453798294e-9 ppm.
  - Fluid reservoirs (sulfide/sulfate/elemental), first → last: {"sulfide":2303991.8179726764,"sulfate":0,"elemental":0} → {"sulfide":38431.41572874615,"sulfate":268779.5138933149,"elemental":0}.
  - Solid reservoirs, first → last: {"sulfide":8.18202732314893,"sulfate":0,"elemental":0,"unclassified":0} → {"sulfide":132.86209535555616,"sulfate":20.48610668583101,"elemental":0,"unclassified":0}.
  - Phase identities: anglesite→sulfate, brochantite→sulfate, acanthite→sulfide, chalcocite→sulfide, chalcopyrite→sulfide, galena→sulfide, pyrite→sulfide, sphalerite→sulfide, tennantite→sulfide, tetrahedrite→sulfide.

## Layer, solid-solution, competition, and habit testimony
  - Accepted layers: 4343; formula-bearing=0; solid-solution=0; binding competition=1; reactive transformation etches=0; masked horizons=3.
  - Competition crystal 6, step 1: tennantite; {"schema":"graduated-competition-residual-v1","crystal_id":6,"scaling":0.9020218250710837,"limiting_species":"As","requested_per_species":{"Cu":6.347526362810079,"Fe":0.9297386503093181,"Zn":1.088385191713934,"As":3.3258618767495847,"S_sulfide":4.6268855947533005},"allocated_per_species":{"Cu":5.725607314468766,"Fe":0.8386445541911373,"Zn":0.9817471970101441,"As":3,"S_sulfide":4.173551788574479},"allocation_rounds":1}.
  - Masked horizon crystal 3, film step 15, breakthrough step 16: pyrite through chalcopyrite; coverage term/prism=0.15/0; thickness=43.4053280670819 µm.
  - Masked horizon crystal 7, film step 21, breakthrough step 22: galena through acanthite; coverage term/prism=0.15/0; thickness=187.22625784523905 µm.
  - Masked horizon crystal 7, film step 30, breakthrough step 31: galena through acanthite; coverage term/prism=0.15/0; thickness=190.0252976267241 µm.
  - Habit crystal 1: quartz; prismatic; extent=individual; forms=["m{100}","r{101}","z{011} dominant"]; size authority={"extent_kind":"individual","cap_cm":1200,"record_cm":600}; CDR=null.
  - Habit crystal 2: sphalerite; tetrahedral; extent=individual; forms=["{111} tetrahedron"]; size authority={"extent_kind":"individual","cap_cm":80,"record_cm":40}; CDR=null.
  - Habit crystal 3: pyrite; striated_cubo_pyritohedral; extent=individual; forms=["{100} + {210}, striated"]; size authority={"extent_kind":"individual","cap_cm":40,"record_cm":20}; CDR=null.
  - Habit crystal 4: chalcopyrite; disphenoidal; extent=individual; forms=["{112} disphenoid","{012}"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 5: tetrahedrite; druzy_coating; extent=individual; forms=["fine-grained drusy surface","sparkling steel-gray"]; size authority={"extent_kind":"individual","cap_cm":12,"record_cm":6}; CDR=null.
  - Habit crystal 6: tennantite; crustiform; extent=individual; forms=["crustiform banded crust","gray-black fracture coating"]; size authority={"extent_kind":"individual","cap_cm":12,"record_cm":6}; CDR=null.
  - Habit crystal 7: galena; cubic; extent=individual; forms=["{100} cube","{111} octahedron"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 8: chalcocite; pseudomorph; extent=individual; forms=["pseudomorph after host — inherits outline","Cu-enriched replacement"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 9: chalcopyrite; disphenoidal; extent=individual; forms=["{112} disphenoid","{012}"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 10: galena; cubic; extent=individual; forms=["{100} cube","{111} octahedron"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 11: galena; cubic; extent=individual; forms=["{100} cube","{111} octahedron"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 12: acanthite; massive_granular; extent=individual; forms=["granular vein filling","disseminated"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 13: acanthite; prismatic; extent=individual; forms=["elongated {110} prism","distorted pseudo-orthorhombic"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 14: galena; cubic; extent=individual; forms=["{100} cube","{111} octahedron"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 15: chalcocite; pseudomorph; extent=individual; forms=["pseudomorph after host — inherits outline","Cu-enriched replacement"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 16: chalcopyrite; disphenoidal; extent=individual; forms=["{112} disphenoid","{012}"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 17: chalcopyrite; disphenoidal; extent=individual; forms=["{112} disphenoid","{012}"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 18: acanthite; massive_granular; extent=individual; forms=["granular vein filling","disseminated"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 19: acanthite; prismatic; extent=individual; forms=["elongated {110} prism","distorted pseudo-orthorhombic"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 20: chalcocite; stellate_sixling; extent=individual; forms=["pseudo-hexagonal sixling twin","dark gray metallic"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 21: chalcocite; sooty_massive; extent=individual; forms=["sooty microcrystalline aggregate","supergene enrichment blanket"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 22: acanthite; massive_granular; extent=individual; forms=["granular vein filling","disseminated"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 23: chalcocite; sooty_massive; extent=individual; forms=["sooty microcrystalline aggregate","supergene enrichment blanket"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 24: acanthite; prismatic; extent=individual; forms=["elongated {110} prism","distorted pseudo-orthorhombic"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 25: calcite; scalenohedral; extent=individual; forms=["v{211} scalenohedron","dog-tooth (Mg-elongated)"]; size authority={"extent_kind":"individual","cap_cm":2000,"record_cm":1000}; CDR=null.
  - Habit crystal 26: malachite; banded_massive; extent=aggregate; forms=["banded botryoidal","concentric layers"]; size authority={"extent_kind":"aggregate","cap_cm":null,"record_cm":9,"status":"Handbook record includes crystals, sprays, and crude composite aggregates to 9 cm; larger botryoidal/stalactitic bodies are aggregate extents and are bounded by cavity capacity, not mislabeled as one crystal.","sources":["Handbook of Mineralogy, Malachite (Anthony et al.), https://www.handbookofmineralogy.org/pdfs/malachite.pdf"]}; CDR=null.
  - Habit crystal 27: cerussite; stellate_sixling; extent=individual; forms=["cyclic {110} sixling twin","pseudo-hexagonal outline"]; size authority={"extent_kind":"individual","cap_cm":20,"record_cm":10}; CDR=null.
  - Habit crystal 28: pyromorphite; yellow_hex_barrel; extent=individual; forms=["hoppered {10̄10} hexagonal prism","step-faced edges"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 29: anglesite; prismatic_orthorhombic; extent=individual; forms=["b{010} pinacoid","m{110} prism","o{011} orthorhombic dome"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 30: pyromorphite; yellow_hex_barrel; extent=individual; forms=["hoppered {10̄10} hexagonal prism","step-faced edges"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 31: pyromorphite; yellow_hex_barrel; extent=individual; forms=["hoppered {10̄10} hexagonal prism","step-faced edges"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 32: pyromorphite; yellow_hex_barrel; extent=individual; forms=["hoppered {10̄10} hexagonal prism","step-faced edges"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 33: brochantite; short_prismatic; extent=individual; forms=["stubby emerald-green prisms"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 34: pyromorphite; yellow_hex_barrel; extent=individual; forms=["hoppered {10̄10} hexagonal prism","step-faced edges"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 35: brochantite; short_prismatic; extent=individual; forms=["stubby emerald-green prisms"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 36: pyromorphite; yellow_hex_barrel; extent=individual; forms=["hoppered {10̄10} hexagonal prism","step-faced edges"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 37: brochantite; short_prismatic; extent=individual; forms=["stubby emerald-green prisms"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 38: brochantite; short_prismatic; extent=individual; forms=["stubby emerald-green prisms"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 39: brochantite; short_prismatic; extent=individual; forms=["stubby emerald-green prisms"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 40: smithsonite; botryoidal/stalactitic; extent=aggregate; forms=["botryoidal crusts","stalactitic masses"]; size authority={"extent_kind":"aggregate","cap_cm":null,"record_cm":null,"status":"Handbook documents uncommon individual crystals to 10 cm but gives no defensible maximum for botryoidal, reniform, stalactitic, or massive bodies; aggregate extent is capacity-bound.","sources":["Handbook of Mineralogy, Smithsonite (Anthony et al.), https://handbookofmineralogy.org/wp-content/uploads/2022/07/smithsonite.pdf"]}; CDR=null.
  - Habit crystal 41: azurite; rosette_bladed; extent=individual; forms=["radiating bladed crystals","rosette"]; size authority={"extent_kind":"individual","cap_cm":25,"record_cm":12.5}; CDR=null.
  - Habit crystal 42: cerussite; tabular; extent=individual; forms=["b{010} pinacoid","m{110} prism"]; size authority={"extent_kind":"individual","cap_cm":20,"record_cm":10}; CDR=null.
  - Habit crystal 43: cerussite; tabular; extent=individual; forms=["b{010} pinacoid","m{110} prism"]; size authority={"extent_kind":"individual","cap_cm":20,"record_cm":10}; CDR=null.
  - Habit crystal 44: cerussite; tabular; extent=individual; forms=["b{010} pinacoid","m{110} prism"]; size authority={"extent_kind":"individual","cap_cm":20,"record_cm":10}; CDR=null.
  - Habit crystal 45: mottramite; botryoidal; extent=individual; forms=["mammillary olive-green crust","concentric layers"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 46: mottramite; botryoidal; extent=individual; forms=["mammillary olive-green crust","concentric layers"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 47: mottramite; botryoidal; extent=individual; forms=["mammillary olive-green crust","concentric layers"]; size authority={"extent_kind":"individual","cap_cm":3,"record_cm":1.5}; CDR=null.
  - Habit crystal 48: mimetite; prismatic; extent=individual; forms=["hexagonal prisms"]; size authority={"extent_kind":"individual","cap_cm":10,"record_cm":5}; CDR=null.
  - Habit crystal 49: chrysocolla; pseudomorph_after_azurite; extent=individual; forms=["azurite prism outline preserved","chrysocolla fill"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 50: hemimorphite; drusy_lining; extent=individual; forms=["drusy linings of vugs","colorless to pale blue-green"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 51: hemimorphite; fan_sheaves_on_smithsonite; extent=individual; forms=["fan-shaped sprays radiating from smithsonite substrate","Tsumeb bowtie habit"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 52: hemimorphite; fan_sheaves_on_smithsonite; extent=individual; forms=["fan-shaped sprays radiating from smithsonite substrate","Tsumeb bowtie habit"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 53: chrysocolla; reniform_globules; extent=individual; forms=["reniform globule cluster","glassy conchoidal fracture"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 54: chrysocolla; reniform_globules; extent=individual; forms=["reniform globule cluster","glassy conchoidal fracture"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 55: chrysocolla; reniform_globules; extent=individual; forms=["reniform globule cluster","glassy conchoidal fracture"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 56: chrysocolla; reniform_globules; extent=individual; forms=["reniform globule cluster","glassy conchoidal fracture"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 57: smithsonite; rhombohedral_scalenohedral; extent=individual; forms=[]; size authority={"extent_kind":"individual","cap_cm":20,"record_cm":10,"status":"Handbook documents uncommon individual crystals to 10 cm but gives no defensible maximum for botryoidal, reniform, stalactitic, or massive bodies; aggregate extent is capacity-bound.","sources":["Handbook of Mineralogy, Smithsonite (Anthony et al.), https://handbookofmineralogy.org/wp-content/uploads/2022/07/smithsonite.pdf"]}; CDR=null.
  - Habit crystal 58: aurichalcite; tufted_spray; extent=individual; forms=["divergent acicular sprays","tufted aggregates"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 59: plumbogummite; encrusting_pyromorphite; extent=individual; forms=["cobalt-blue botryoidal crust over hexagonal prisms","follows the pyromorphite substrate surface","active green pyromorphite tips may project through"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 60: plumbogummite; encrusting_pyromorphite; extent=individual; forms=["cobalt-blue botryoidal crust over hexagonal prisms","follows the pyromorphite substrate surface","active green pyromorphite tips may project through"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 61: plumbogummite; encrusting_pyromorphite; extent=individual; forms=["cobalt-blue botryoidal crust over hexagonal prisms","follows the pyromorphite substrate surface","active green pyromorphite tips may project through"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.

## Scenario notes (author's own rationale)
> Anchor: Roughten Gill Mine, Caldbeck Fells, Cumbria. The Caldbeck Fells district occupies the northern Skiddaw inlier; Roughten Gill itself sits on the southern flank of Balliway Rigg (NY 304 344). Host is the Ordovician Eycott Volcanic Group (basaltic-andesitic to rhyolitic lavas + tuffs — NOT Borrowdale Volcanic Group, a common error in derivative literature). The South Vein cuts a NE-SW normal fault juxtaposing the Carrock Fell Intrusive Complex's Iron Crag Microgranite (Carrock Granophyre, U-Pb zircon 452.4 ± 3.1 Ma) against gabbro of the same complex. Caldbeck Fells district hosts ~175 valid mineral species — the greatest mineralogical diversity per unit area in the British Isles per Bridges et al. 2011 + Cooper & Stanley 1990.

> Type locality for plumbogummite PbAl3(PO4)2(OH)5·H2O (Hartley 1882). Förtsch (1967) showed the type material is a plumbogummite-hinsdalite-hidalgoite mix-crystal. The simulator records a late Pb-Al-P plumbogummite crust encrusting older, still-active pyromorphite; it does not claim a replacement reaction that the engine does not execute.

> SIM 257 reconciliation: Bridges et al. (2011), the mine-specific study, replaces the former district-level inference. Quartz is the dominant gangue with significant dolomite/calcite; galena, chalcopyrite and sphalerite are the main primary ores. Supergene malachite and cerussite dominate because carbonate minerals keep pH, carbonate activity and pCO2 comparatively high. Linarite is fairly rare, caledonite is known from only a few specimens, and leadhillite is very rare; they remain possible but are not deterministic scenario headlines.

> Host rock remains silicate (basalt is the closest supported proxy), but the vein itself contains significant carbonate gangue. The step-140 carbon input is therefore explicitly booked as calcite/dolomite-gangue dissolution, not misattributed to the volcanic host or created by a pH-only change.

> Fluid chemistry per BGS Earthwise Lake District + Russell Society Caldbeck papers: T 110-130°C primary (cooler than Pennine-Yorkshire 150-250°C bracket; calibrated to the Lake District lower bound); salinity 15-30 wt% NaCl-eq basinal brine (scenario broth at 8 wt% as scaled simulator value); Ag-in-galena ~838 ppm (the 'lattice silver' reservoir liberated during supergene oxidation produces the native_silver flakes documented at Roughten Gill); native antimony + Sb-sulphosalt inclusions in galena are diagnostic. Sulfur partly sourced from Carboniferous evaporites per BGS sulfur-isotope work.

> Specimen hierarchy per Bridges et al. (2011): locally arsenate-rich pyromorphite and later encrusting plumbogummite are flagship Pb products; malachite + cerussite dominate ordinary weathering; hemimorphite is abundant from sphalerite oxidation plus silica released by extensive wall-rock weathering. Rosasite is very common and aurichalcite is not rare. Native silver is an exceptional one-specimen-scale occurrence, while acanthite is mainly a post-collection alteration product.

> Catalog gaps retained for future work: hinsdalite + hidalgoite in the type mix, beudantite/corkite, mattheddleite, scotlandite, and several hydrated Cu sulfates. Those absent engines are not simulated by relabeling a different phase.

> Negative evidence is mine-grain and phase-specific. Realgar, pararealgar, orpiment, proustite, turquoise, vanadinite, descloizite, siderite, haidingerite, pharmacolite and koettigite are excluded from this authored scenario; the same mineral engines remain available in documented localities and Creative mode.

> MINDAT VALID-SPECIES REFERENCE (boss-supplied screenshots, 2026-07-27 — 'Roughton Gill Mine, Roughton Gill, Caldbeck, Allerdale, Cumbria, England, UK', mine-grain per the boss's methodology; 68 valid + 1 erroneous (Parahopeite); full transcription incl. mindat's '?' uncertain markers in research/scenarios/roughten_gill/citations-mindat-roughten-gill-2026-07-27.md; commodities Lead + Silver; rock types Gabbro + Gossan). WHAT THE LIST VOTES ON (vs seed-42 v236 sim output, 27 species): (a) LICENSED 21/27 — acanthite, anglesite, aurichalcite, brochantite, caledonite, cerussite, chalcocite, chrysocolla, covellite, galena (+ Ag-bearing var.!), leadhillite, linarite, mottramite, plumbogummite (TL!), pyrite, pyromorphite, rosasite, selenite (Gypsum valid — cross-mine selenite tally 6-YES/2-NO), sphalerite, tennantite ('Tennantite-Tetrahedrite Series' carries mindat's ? marker), tetrahedrite. The SILVER species are legit here (Native Silver + Acanthite + Ag-bearing galena all valid, commodity Silver) — the counter-case to Tri-State's Ag-poor fingerprint; the discrete-Ag over-fire pattern does NOT apply to this locality's acanthite. (b) NOT ON THE LIST — census flags: VANADINITE (×6, 5.4 mm — the BIG one; the v109 tune note already says 'vanadinite wrong for Caldbeck, route V to mottramite' and halved V 12→6, but the suppression under-delivers: vanadinite still outgrows mottramite 5380 vs 615 µm; the sheet corroborates the in-repo intent — a tune/gate follow-up candidate), PARAREALGAR ×6 + ORPIMENT (As at Caldbeck is ARSENATE — mimetite/campylite, olivenite?, carminite? — not sulfide; matches the v228 note's compositional complaint, As-should-ride-the-sulfosalt-sink, rung-4 territory), PROUSTITE ×2 (the 4th instance of the cross-mine discrete-Ag-species pattern — the documented Ag here is native silver + acanthite + lattice Ag, not Ag-sulfosalts), TURQUOISE ×4 (unlisted; the legit P-sink is plumbogummite/pyromorphite), DESCLOIZITE ×4 0-µm dust (the 4d re-deal called it 'the real Caldbeck Cu/Zn fork' — this mine's sheet lists only mottramite; dust-level, watch not act). (c) EXPECTS NO-SHOWS CORROBORATED: chalcopyrite, calcite, mimetite (+ var. Campylite — the barrel-shaped classic), native_silver are all VALID on the sheet — the promises are right, the delivery is the gap (tuning targets, not de-confabulations). (d) documented-unfired depth: azurite, malachite, smithsonite, hemimorphite, cuprite, cinnabar, erythrite, wulfenite, langite, serpierite, susannite?, scotlandite + the alunite-supergroup tail already noted as add-mineral candidates; aragonite + dolomite + baryte gangue. (e) mindat's '?' markers recorded verbatim in the transcription — uncertain entries vote weakly in either direction.
